--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,11 @@ repositories {
 }
 
 dependencies {
+    implementation 'org.hibernate:hibernate-core:5.6.5.Final'
+    implementation 'org.apache.logging.log4j:log4j-api:2.17.2'
+    implementation 'org.apache.logging.log4j:log4j-core:2.17.2'
+    implementation 'mysql:mysql-connector-java:8.0.25'
+// https://mvnrepository.com/artifact/com.h2database/h2
 
 }
 
