--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,8 @@
 plugins {
     id 'application'
     id 'org.openjfx.javafxplugin' version '0.0.12'
+    id "org.xbib.gradle.plugin.jflex" version "1.6.0"
+    id "cup.gradle.cup-gradle-plugin" version "2.0"
 }
 
 
@@ -29,3 +31,5 @@ dependencies {
 test {
     useJUnitPlatform()
 }
+
+cupCompile.onlyIf {false}
